option('jpeg', type: 'feature', value: 'auto', description: 'Use JPEG')
option('tiff', type: 'feature', value: 'auto', description: 'Use LibTiff')

option('samples', type: 'boolean', value: 'false', description: 'Build the samples')
option('fastfloat', type: 'boolean', value: 'false', description: 'Build and install the fast float plugin, use only if GPL 3.0 is acceptable')
